[package]
name = "duty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.9", features = ["macros", "parsing"] }
thiserror = "1.0.30"
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }